# tinsh

./: .jpshrc  Cargo.toml  Makefile  README.md  builtin.c  builtin.h  cd.c  cd.h  color.c  color.h  compl.c  compl.h  debug.c  debug.h  def.h  defs.c  defs.h  env.c  env.h  eval.c  eval.h  eval_utils.c  eval_utils.h  exec.c  exec.h  exec_utils.c  exec_utils.h  hist.c  hist.h  impsh.c  jpsh  jpsh.c  jpshrc.example  linebuffer.c  linebuffer.h  ll_utils.c  ll_utils.h  oeval.c  oexec.c  parseline.c  (+15 more)
builtins/: builtins.c  builtins.h  cd.c  exit.c  hist.c  set.c  unset.c
demo/: empty_builtin.tin  tin.vim
eval/: comment.c  comment.h  eval.c  eval.h  eval_utils.c  eval_utils.h  job_form.c  job_form.h  jq_form.c  jq_form.h  linkedlist.c  linkedlist.h  mask.c  mask.h  queue.c  queue.h  spl_block.c  spl_block.h  spl_line.c  spl_line.h  spl_pipe.c  spl_pipe.h  stack.h  subsh.c  subsh.h  var.c  var.h
exec/: cd.c  cd.h  chk_exec.c  chk_exec.h  env.c  env.h  exec.c  exec.h  exec_job.c  exec_job.h  exec_utils.c  exec_utils.h  func.c  func.h  redirect.c  redirect.h  subshell.c  subshell.h  var.c  var.h
inter/: buffer.c  buffer.h  color.c  color.h  compl.c  compl.h  hist.c  hist.h  term.c  term.h
posix/: ptypes.c  ptypes.h  putils.c  putils.h
samples/: sample.jpsh
src/: .exec.rs.swp  .posix.rs.swp  builtins.rs  compl.rs  err.rs  eval.rs  exec.rs  fork.rs  hist.rs  lexer.rs  main.rs  opts.rs  parser.rs  posix.rs  prompt.rs  shell.rs  sym.rs
types/: arglist.c  arglist.h  block.c  block.h  block_job.c  block_job.h  fn.c  fn.h  hashtable.c  hashtable.h  job.c  job.h  job_queue.c  (+15 more)
(+27 files in other folders)
