[package]

name = "tinsh"
version = "0.0.1"
authors = [ "jpco <mail@jpco.io>" ]
description = "Non-POSIX shell language."
readme = "README.md"

# no dependencies which make hidden threads.
# not allowed under any circumstances.
[dependencies]
termios = "*"
libc = "*"
unicode-segmentation = "*"
glob = "*"
